# spacecraft

./: .gitignore  CMakeLists.txt  README.md
cmake/: ConfigurePackage.cmake  FindEigen.cmake  FindGLEW.cmake  FindGLOG.cmake  FindMyGui.Opengl.cmake  FindMyGui.cmake  configure_project.cmake  filesystem.cmake
gtest/: main.cpp
src/: BaseRenderWidget.cpp  BaseRenderWidget.hpp  BaseSceneObject.cpp  BaseSceneObject.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Dynamics.cpp  Dynamics.hpp  EditorScene.cpp  EditorScene.hpp  FxManager.cpp  FxManager.hpp  GLRenderWidget.cpp  GLRenderWidget.hpp  GUIManager.cpp  GUIManager.hpp  IndexedMesh.cpp  IndexedMesh.hpp  InputConverter.h  Mesh.cpp  Mesh.hpp  Octree.cpp  Octree.hpp  RenderWidget.cpp  RenderWidget.hpp  Scene.cpp  Scene.hpp  ShipModel.cpp  ShipModel.hpp  SimpleMesh.cpp  SimpleMesh.hpp  SimulatedScene.cpp  SimulatedScene.hpp  SimulatedSceneServer.cpp  SimulatedSceneServer.hpp  TextRender.cpp  TextRender.hpp  Utils.cpp  Utils.hpp  (+3 more)
src/MeshData/: Cube.hpp  Stars.hpp
src/Messages/: ClientMessageHandler.h  Dispatcher.h  MessageTypes.h  MessageWrapper.h  Messages.h  TypeList.h
src/shaders/: blockMaterial.frag  blockMaterial.vert  cube.frag  frag.glsl  geometryLine.frag  geometryLine.geom  geometryLine.vert  simpleLine.frag  simpleLine.vert  stars.frag  stars.vert  vert.glsl
